BE/Aucation/src/main/java/com/example/aucation/common/error/WrongAccessException.java
package com.example.aucation.common.error;

public class WrongAccessException extends ApplicationException {

    public WrongAccessException(ApplicationError error) {
        super(error);
    }
}
